[gd_scene load_steps=2 format=3 uid="uid://d4n9k8z0n5rst"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="SpeedContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="SpeedLabel" type="Label" parent="SpeedContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="UnitLabel" type="Label" parent="SpeedContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "KM/H"
horizontal_alignment = 2

[node name="LapContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -20.0
grow_vertical = 0

[node name="LapLabel" type="Label" parent="LapContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Lap: 1/3"

[node name="TimeLabel" type="Label" parent="LapContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Time: 00:00.00"

[node name="BestTimeLabel" type="Label" parent="LapContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Best: --:--.--"
